[package]
name = "orka-controller"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.9"
prost = "0.11"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.9"

[[bin]]
name= "server"
path= "src/server.rs"

[[bin]]
name= "client"
path= "src/client.rs"

